<resources>
    <string name="app_name">RadioManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="country_filter">Country</string>
    <string name="lang_filter">Language</string>
    <string name="style_filter">Style</string>
    <string name="sort_filter">Sort</string>
    <string name="confirm_filter">Confirm</string>
    <string name="entrance">Entrance</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="enter">Enter</string>
    <string name="create_account">Create account</string>
    <string name="error_entrance">Uncorrected login or password</string>
    <string name="registration">Registration</string>
</resources>